[gd_scene load_steps=17 format=2]

[ext_resource path="res://code/main.gd" type="Script" id=1]
[ext_resource path="res://imag/CardsNovos/CardTree_Guide.jpg" type="Texture" id=2]
[ext_resource path="res://imag/BG/Paint.jpg" type="Texture" id=3]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_03.png" type="Texture" id=6]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_04.png" type="Texture" id=7]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_01.png" type="Texture" id=8]
[ext_resource path="res://imag/Constituica.png" type="Texture" id=9]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_02.png" type="Texture" id=10]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_05.png" type="Texture" id=11]
[ext_resource path="res://imag/Main/Papel.png" type="Texture" id=12]
[ext_resource path="res://Control.tscn" type="PackedScene" id=13]
[ext_resource path="res://Group 1.png" type="Texture" id=16]
[ext_resource path="res://progress.png" type="Texture" id=17]
[ext_resource path="res://Subtract.png" type="Texture" id=18]
[ext_resource path="res://progressCenadao.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 8 ) ],
"loop": false,
"name": "mensagem",
"speed": 8.0
} ]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" parent="." instance=ExtResource( 13 )]
visible = false
margin_left = 263.0
margin_top = 143.0
margin_right = 1108.0
margin_bottom = 302.0
rect_pivot_offset = Vector2( -10, 1 )

[node name="HUD" type="Control" parent="."]
margin_left = 2.0
margin_top = 1.0
margin_right = 1029.0
margin_bottom = 604.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="HUD"]
scale = Vector2( 0.5, 0.5 )
z_index = 6

[node name="Pop" type="TextureProgress" parent="HUD/Node2D"]
margin_left = 68.0
margin_top = 86.0
margin_right = 123.0
margin_bottom = 357.0
step = 5.0
texture_under = ExtResource( 16 )
texture_over = ExtResource( 18 )
texture_progress = ExtResource( 17 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Congra" type="TextureProgress" parent="HUD/Node2D"]
margin_left = 146.0
margin_top = 86.0
margin_right = 201.0
margin_bottom = 357.0
step = 5.0
texture_under = ExtResource( 16 )
texture_over = ExtResource( 18 )
texture_progress = ExtResource( 19 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chamadas" type="Sprite" parent="."]
position = Vector2( 508, 281 )
scale = Vector2( 0.952077, 0.952077 )
texture = ExtResource( 2 )
hframes = 3
vframes = 9

[node name="BG" type="Sprite" parent="."]
position = Vector2( 514, 300.312 )
z_index = -1
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Consulta_sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 509, 288 )
scale = Vector2( 0.701942, 0.690965 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="BTN" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Papel" type="Sprite" parent="BTN"]
position = Vector2( 617, 464 )
z_index = -1
texture = ExtResource( 12 )
hframes = 5
frame = 1

[node name="PapelArea" type="Control" parent="BTN/Papel"]
anchor_left = 0.057
anchor_top = 0.142
anchor_right = 0.905
anchor_bottom = 0.858
margin_left = -39.503
margin_top = -47.49
margin_right = -39.495
margin_bottom = -47.51
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tablet2" type="AnimatedSprite" parent="BTN"]
position = Vector2( 365.75, 485.5 )
scale = Vector2( 0.954545, 0.954545 )
z_index = -1
frames = SubResource( 1 )
animation = "mensagem"

[node name="TabletArea" type="Control" parent="BTN/Tablet2"]
anchor_left = 0.015
anchor_top = 0.273
anchor_right = 0.955
anchor_bottom = 0.844
margin_left = -49.485
margin_top = -33.018
margin_right = -49.545
margin_bottom = -36.704
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aumentar" type="Button" parent="BTN"]
visible = false
anchor_left = 0.274
anchor_top = 0.736
anchor_right = 0.415
anchor_bottom = 0.821
margin_left = 0.424011
margin_top = -0.127991
margin_right = -131.96
margin_bottom = -0.957977
rect_scale = Vector2( 11.96, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vender" type="Button" parent="BTN"]
visible = false
anchor_left = 0.537
anchor_top = 0.732
anchor_right = 0.677
anchor_bottom = 0.818
margin_left = 0.112
margin_top = 0.263977
margin_right = -131.248
margin_bottom = -0.164001
rect_scale = Vector2( 11.96, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Positivo" type="Button" parent="BTN"]
anchor_left = 0.336
anchor_top = 0.693
anchor_right = 0.457
anchor_bottom = 0.752
margin_left = -0.0640259
margin_top = 0.199982
margin_right = 0.0319824
margin_bottom = -0.200012
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Negativo" type="Button" parent="BTN"]
anchor_left = 0.542
anchor_top = 0.693
anchor_right = 0.656
anchor_bottom = 0.752
margin_left = -5.008
margin_top = 0.199982
margin_right = 0.255981
margin_bottom = -0.200012
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Consulta" type="Button" parent="BTN"]
anchor_left = 0.044
anchor_top = 0.779
anchor_right = 0.114
anchor_bottom = 0.813
margin_left = -0.0560036
margin_top = 0.157959
margin_right = 0.263992
margin_bottom = -0.174011
text = "Consultar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="proximo" type="Button" parent="BTN"]
visible = false
margin_left = 401.0
margin_top = 519.0
margin_right = 605.0
margin_bottom = 570.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaibaMais" type="Control" parent="."]
margin_left = 410.0
margin_top = 280.0
margin_right = 588.0
margin_bottom = 304.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="BTN/Papel/PapelArea" to="." method="_on_PapelArea_mouse_entered"]
[connection signal="mouse_entered" from="BTN/Tablet2/TabletArea" to="." method="_on_Tablet_mouse_entered"]
[connection signal="pressed" from="BTN/Aumentar" to="." method="_on_Aumentar_pressed"]
[connection signal="pressed" from="BTN/Vender" to="." method="_on_Vender_pressed"]
[connection signal="button_up" from="BTN/Positivo" to="." method="_on_Positivo_button_up"]
[connection signal="button_up" from="BTN/Negativo" to="." method="_on_Negativo_button_up"]
[connection signal="button_up" from="BTN/Consulta" to="." method="_on_Consulta_button_up"]
[connection signal="pressed" from="BTN/proximo" to="." method="_on_proximo_pressed"]
[connection signal="mouse_entered" from="SaibaMais" to="." method="_on_SaibaMais_mouse_entered"]
[connection signal="mouse_exited" from="SaibaMais" to="." method="_on_SaibaMais_mouse_exited"]
